--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class="card-content">
                       <h2>About Me:</h2>
                       <hr>
-                      <img src="img/hombre-alto-angulo-que-trabaja-computadora-portatil_23-2150287676.avif" alt="fotodni">
+                      <img src="img/perfil.jpg" alt="fotodni">
                       <ul>
                         <li>Name: Adrian Cabrera Leonis</li>
                         <li>Profile: Web developer</li>
@@ -58,17 +58,17 @@
                         <li>Phone: (+34) 622348856</li>
                       </ul>
                       <p>Hello, my name is Adrian. I am 20 years old and live in Orihuela/Alicante. I have studied Microcomputer Systems and Networks at IES Las Espeñetas, and currently, I am pursuing a higher degree in Web Application Development at EFA El Campico. I am proficient in both HTML and CSS. Additionally, I can manage databases and have a foundation in Java.</p>
-                      <a href="Curriculum vitae.pdf" class="download-button" download>Download My Curriculum</a>
+                      <a href="Curriculum vitae.pdf" class="download-button" download target="_blank">Download My Curriculum</a>
                     </div>
                 </div>
             </section>
             <section class="work" id="work">
                 <h2>WORKS:</h2>
                 <div class="card-container">
-                    <a href="" _blank><div class="card-work"><img src="img/hombre-alto-angulo-que-trabaja-computadora-portatil_23-2150287676.avif" alt="proyecto1">Proyecto Youtube</div></a>
-                    <a href=""><div class="card-work"><img src="img/hombre-alto-angulo-que-trabaja-computadora-portatil_23-2150287676.avif" alt="proyecto2">Tarjeta 2</div></a>
-                    <a href=""><div class="card-work"><img src="img/hombre-alto-angulo-que-trabaja-computadora-portatil_23-2150287676.avif" alt="proyecto3">Tarjeta 3</div></a>
-                    <a href=""><div class="card-work"><img src="img/hombre-alto-angulo-que-trabaja-computadora-portatil_23-2150287676.avif" alt="proyecto4">Tarjeta 4</div></a>
+                    <a href="youtube/index.html" target="_blank"><div class="card-work"><img src="img/youtube.jpg" alt="proyecto1">Proyecto Youtube</div></a>
+                    <a href="google/google.html" target="_blank"><div class="card-work"><img src="img/google.jpg" alt="proyecto2">Proyecto Google</div></a>
+                    <a href="portafolio/about.html" target="_blank"><div class="card-work"><img src="img/portafolio1.jpg" alt="proyecto3">Proyecto Portafolio1</div></a>
+                    <a href="css/index.html" target="_blank"><div class="card-work"><img src="img/avatar.jpg" alt="proyecto4">Proyecto Avatar</div></a>
                 </div>
             </section>
             <section class="contact">
@@ -99,9 +99,9 @@
         <div class="redes">
                 <p>Adrian Cabrera</p>
                 <img src="img/instagram.svg" alt="Instagram">
-                <a href=""><img src="img/linkedin.svg" alt="Linkedin"></a>
+                <a href="www.linkedin.com/in/adrian-cabrera-leonis-868153298" target="_blank"><img src="img/linkedin.svg" alt="Linkedin"></a>
                 <img src="img/twitter.svg" alt="Twitter">
-                <a href=""><img src="img/github.svg" alt="github"></a>
+                <a href="https://github.com/adriicl/portafoliobueno.git" target="_blank"><img src="img/github.svg" alt="github"></a>
         </div>
     </footer>
 </body>
