--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
                 </div>
             </section>
             <section class="contact">
-                <div id="contenedor">
+                <div class="contenedor">
                     <div class="titulo">
                         <h1 id="contact">CONTACT</h1>
                     </div>
-                    <div id="formulario">
+                    <div class="formulario">
                         <form method="POST">
             
                             <input type="text" name="Nombre" placeholder="Ingrese su Nombre"/>
